gpu-operator/archive/22.9.0/platform-support.rst
.. Date: July 30 2020
.. Author: pramarao

.. _operator-platform-support-22.9.0:



****************
Platform Support
****************
This documents provides an overview of the GPUs and system Platform configurations supported.

.. include:: life-cycle-policy.rst

Supported NVIDIA GPUs/Systems
----

The following NVIDIA datacenter/enterprise GPUs are supported on x86 based platforms:

.. tabs::

  .. tab:: Datacenter A, H and L-series Products

    +-------------------------+---------------------------+
    | Product                 | Architecture              |
    +=========================+===========================+
    | NVIDIA H100             | NVIDIA Hopper             |
    +-------------------------+---------------------------+
    | NVIDIA DGX A100         | A100 and NVSwitch         |
    +-------------------------+---------------------------+
    | NVIDIA HGX A100         | A100 and NVSwitch         |
    +-------------------------+---------------------------+
    | NVIDIA A100             | NVIDIA Ampere             |
    +-------------------------+---------------------------+
    | NVIDIA A100X            | NVIDIA Ampere             |
    +-------------------------+---------------------------+
    | NVIDIA A40              | NVIDIA Ampere             |
    +-------------------------+---------------------------+
    | NVIDIA A30              | NVIDIA Ampere             |
    +-------------------------+---------------------------+
    | NVIDIA A30X             | NVIDIA Ampere             |
    +-------------------------+---------------------------+
    | NVIDIA A16              | NVIDIA Ampere             |
    +-------------------------+---------------------------+
    | NVIDIA A10              | NVIDIA Ampere             |
    +-------------------------+---------------------------+
    | NVIDIA A2               | NVIDIA Ampere             |
    +-------------------------+---------------------------+

    .. note::

      * Hopper (H100) GPU is only supported on x86 servers using  CUDA 11.8 / R520 Data Center drivers.
      * The GPU Operator supports DGX A100 with DGX OS 5.1+ and Red Hat OpenShift using Red Hat Core OS. For installation instructions, see :ref:`here <preinstalled-drivers-and-toolkit-22.9.0>` for DGX OS 5.1+ and :ref:`here <openshift-introduction-22.9.0>` for Red Hat OpenShift.

  .. tab:: Datacenter D,T and V-series Products

    +-----------------------+------------------------+
    | Product               | Architecture           |
    +=======================+========================+
    | NVIDIA T4             | Turing                 |
    +-----------------------+------------------------+
    | NVIDIA V100           | Volta                  |
    +-----------------------+------------------------+
    | NVIDIA P100           | Pascal                 |
    +-----------------------+------------------------+
    | NVIDIA P40            | Pascal                 |
    +-----------------------+------------------------+
    | NVIDIA P4             | Pascal                 |
    +-----------------------+------------------------+
  
  .. tab:: Datacenter RTX / T-series Products

    +-------------------------+------------------------+
    | Product                 | Architecture           |
    +=========================+========================+
    | NVIDIA RTX A6000        | NVIDIA Ampere          |
    +-------------------------+------------------------+
    | NVIDIA RTX A5000        | NVIDIA Ampere          |
    +-------------------------+------------------------+
    | NVIDIA RTX A4000        | NVIDIA Ampere          |
    +-------------------------+------------------------+ 
    | NVIDIA RTX A8000        | Turing                 |
    +-------------------------+------------------------+
    | NVIDIA RTX A6000        | Turing                 |
    +-------------------------+------------------------+
    | NVIDIA RTX A5000        | Turing                 |
    +-------------------------+------------------------+
    | NVIDIA RTX A4000        | Turing                 |
    +-------------------------+------------------------+
    | NVIDIA T1000            | Turing                 |
    +-------------------------+------------------------+
    | NVIDIA T600             | Turing                 |
    +-------------------------+------------------------+
    | NVIDIA T400             | Turing                 |
    +-------------------------+------------------------+


.. _gpu-operator-arm-platforms-22.9.0:

Supported ARM based platforms
----

The following NVIDIA datacenter/enterprise GPUs are supported:

.. tabs::

  .. tab:: ARM platforms 
  
    +-------------------------+---------------------------+
    | Product                 | Architecture              |
    +=========================+===========================+
    | NVIDIA A100X            | Ampere                    |
    +-------------------------+---------------------------+
    | NVIDIA A30X             | Ampere                    |
    +-------------------------+---------------------------+
    | AWS EC2 G5g instaces    | Turing                    |
    +-------------------------+---------------------------+

    .. note::

      The GPU Operator only supports platforms using discrete GPUs - Jetson or other embedded products with integrated GPUs are not supported.

    .. note::

      The R520 Data Center Driver is not supported for ARM.


Supported deployment options, hypervisors and NVIDIA vGPU based products
----

The GPU Operator has been validated in the following scenarios:

+-----------------------------------------------------+
| Deployment Options                                  |
+=====================================================+
| Bare Metal                                          |
+-----------------------------------------------------+
| Virtual machines with GPU Passthrough               |
+-----------------------------------------------------+
| Virtual machines with NVIDIA vGPU based products    |
+-----------------------------------------------------+
   
Hypervisors (On-premises)

+-----------------------------------------------------+
| Hypervisors                                         |
+=====================================================+
| VMware vSphere 7                                    |
+-----------------------------------------------------+
| Red Hat Enterprise Linux KVM                        |
+-----------------------------------------------------+
| Red Hat Virtualization (RHV)                        |
+-----------------------------------------------------+

NVIDIA vGPU based products

+-----------------------------------------------------+
| NVIDIA vGPU based products                          |
+=====================================================+
| NVIDIA vGPU (NVIDIA AI Enterprise)                  |
+-----------------------------------------------------+
| NVIDIA vCompute Server                              |
+-----------------------------------------------------+
| NVIDIA RTX Virtual Workstation                      |
+-----------------------------------------------------+
.. note::
  GPU Operator is supported with NVIDIA vGPU 12.0+

.. _container-platforms-22.9.0:

Supported Operating Systems and Kubernetes platforms
----

The GPU Operator has been validated in the following scenarios:

.. note::
   The Kubernetes community supports only the last three minor releases as of v1.17. Older releases
   may be supported through enterprise distributions of Kubernetes such as Red Hat OpenShift.

.. tabs::

  .. tab:: Bare Metal / Virtual Machines with GPU Passthrough 
  
    +------------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    |                                    | Kubernetes                   | Red Hat OpenShift | VMware vSphere with Tanzu | Rancher Kubernetes Engine 2   |
    +====================================+==============================+===================+===========================+===============================+
    | Ubuntu 18.04 LTS                   | 1.21, 1.22, 1.23, 1.24, 1.25 |                   |                           |                               |
    +------------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    | Ubuntu 20.04 LTS                   | 1.21, 1.22, 1.23, 1.24, 1.25 |                   | VMware vSphere 7.0 U3c    | 1.21, 1.22, 1.23, 1.24, 1.25  |
    +------------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    | Ubuntu 22.04 LTS                   | 1.21, 1.22, 1.23, 1.24, 1.25 |                   |                           |                               |
    +------------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    | CentOS 7                           | 1.21, 1.22, 1.23, 1.24, 1.25 |                   |                           |                               |
    +------------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    | Red Hat Core OS                    |                              | 4.9, 4.10, 4.11   |                           |                               |
    +------------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    | Red Hat Enterprise Linux 8.4, 8.6  | 1.21, 1.22, 1.23, 1.24, 1.25 |                   |                           | 1.21, 1.22, 1.23, 1.24, 1.25  |
    +------------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+

    .. note::
      Red Hat OpenShift is supported on the AWS (G4, G5, P3 and P4), Azure (NC-T4-v3, NC-v3 and ND-A100-v4) and GCP (T4, V100, A100 based instances).
  
  .. tab:: Virtual Machines with NVIDIA vGPU
  
    +-----------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    |                                   | Kubernetes                   | Red Hat OpenShift | VMware vSphere with Tanzu | Rancher Kubernetes Engine 2   |
    +===================================+==============================+===================+===========================+===============================+
    | Ubuntu 20.04 LTS                  | 1.21, 1.22, 1.23, 1.24, 1.25 |                   | VMware vSphere 7.0 U3c    | 1.21, 1.22, 1.23, 1.24, 1.25  |
    +-----------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    | Ubuntu 22.04 LTS                  | 1.21, 1.22, 1.23, 1.24, 1.25 |                   |                           |                               |
    +-----------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    | Red Hat Core OS                   |                              | 4.9, 4.10, 4.11   |                           |                               |
    +-----------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+
    | Red Hat Enterprise Linux 8.4, 8.6 | 1.21, 1.22, 1.23, 1.24, 1.25 |                   |                           | 1.21, 1.22, 1.23, 1.24, 1.25  |
    +-----------------------------------+------------------------------+-------------------+---------------------------+-------------------------------+

Supported Container Runtimes
----

The GPU Operator has been validated in the following scenarios:
  
+----------------------------+-----------------+----------------+
| Product                    | Containerd 1.4+ | CRI-O          |
+============================+=================+================+
| Ubuntu 18.04 LTS           | Yes             | No             |
+----------------------------+-----------------+----------------+
| Ubuntu 20.04 LTS           | Yes             | No             |
+----------------------------+-----------------+----------------+
| Ubuntu 22.04 LTS           | Yes             | No             |
+----------------------------+-----------------+----------------+
| CentOS 7                   | Yes             | No             |
+----------------------------+-----------------+----------------+
| Red Hat Core OS (RHCOS)    | No              | Yes            |
+----------------------------+-----------------+----------------+
| Red Hat Enterprise Linux 8 | Yes             | Yes            |
+----------------------------+-----------------+----------------+

.. note::
  The GPU Operator has been validated with version 2 of the containerd config file.

NVIDIA AI Enterprise support matrix
----

The latest version of NVIDIA AI Enterprise supports the following scenarios:

.. tabs::

  .. tab:: Bare Metal / Virtual Machines with GPU Passthrough 
  
    +---------------------------+------------------------------+------------------------------+---------------------------+
    |                           | Ubuntu 20.04 LTS             | Ubuntu 22.04 LTS             | Red Hat Core OS (RHCOS)   |
    +===========================+==============================+==============================+===========================+
    | Kubernetes                | 1.21, 1.22, 1.23, 1.24, 1.25 | 1.21, 1.22, 1.23, 1.24, 1.25 |                           |
    +---------------------------+------------------------------+------------------------------+---------------------------+
    | Red Hat OpenShift         |                              |                              | 4.9.9+, 4.10, 4.11        |
    +---------------------------+------------------------------+------------------------------+---------------------------+
    | VMware vSphere with Tanzu | VMware vSphere 7.0 U3c       |                              |                           |
    +---------------------------+------------------------------+------------------------------+---------------------------+

  
  .. tab:: Virtual Machines with NVIDIA vGPU

    +---------------------------+------------------------------+------------------------------+---------------------------+
    |                           | Ubuntu 20.04 LTS             | Ubuntu 22.04 LTS             | Red Hat Core OS (RHCOS)   |
    +===========================+==============================+==============================+===========================+
    | Kubernetes                | 1.21, 1.22, 1.23, 1.24, 1.25 | 1.21, 1.22, 1.23, 1.24, 1.25 |                           |
    +---------------------------+------------------------------+------------------------------+---------------------------+
    | Red Hat OpenShift         |                              |                              | 4.9.9+, 4.10, 4.11        |
    +---------------------------+------------------------------+------------------------------+---------------------------+
    | VMware vSphere with Tanzu | VMware vSphere 7.0 U3c       |                              |                           |
    +---------------------------+------------------------------+------------------------------+---------------------------+

.. note::
      Red Hat OpenShift is supported on the AWS (G4, G5, P3 and P4), Azure (NC-T4-v3, NC-v3 and ND-A100-v4) and GCP (T4, V100, A100 based instances).

Support for KubeVirt
----

KubeVirt v0.36.0 is supported with the following operating systems and kubernetes versions.

+-----------------------------------+------------------------+-------------------+
|                                   | Kubernetes             | Red Hat OpenShift |
+===================================+========================+===================+
| Ubuntu 20.04 LTS                  | 1.21, 1.22, 1.23, 1.24 |                   |
+-----------------------------------+------------------------+-------------------+
| Ubuntu 22.04 LTS                  | 1.21, 1.22, 1.23, 1.24 |                   |
+-----------------------------------+------------------------+-------------------+
| Red Hat Core OS                   |                        | 4.11              |
+-----------------------------------+------------------------+-------------------+

Support for GPUDirect RDMA
----

Supported operating systems and NVIDIA GPU Drivers with GPUDirect RDMA.

+--------------------------------------------------+------------------------+---------------------------+---------------------------+---------------------------+
|                                                  | 470 GPU Driver         | 510 GPU Driver            | 515 GPU Driver            | 520 GPU Driver            |
+==================================================+========================+===========================+===========================+===========================+
| Ubuntu 20.04 LTS with Network Operator 1.3       | 470.129.06             | 510.47.03                 | 515.48.07                 | 520.61.05                 |
+--------------------------------------------------+------------------------+---------------------------+---------------------------+---------------------------+
| Red Hat OpenShift 4.10 with Network Operator 1.3 | 470.129.06             | 510.47.03                 | 515.48.07                 | 520.61.05                 |
+--------------------------------------------------+------------------------+---------------------------+---------------------------+---------------------------+
| CentOS 7 with MOFED installed on the node        | 470.129.06             | 510.47.03                 | 515.48.07                 | 520.61.05                 |
+--------------------------------------------------+------------------------+---------------------------+---------------------------+---------------------------+


For more information on GPUDirect RDMA refer to :ref:`this document <operator-rdma-22.9.0>`.

Additional supported container management tools:
----
* Helm v3
* Red Hat Operator Lifecycle Manager (OLM)

Technical Preview
----
Try out below features that are in technical preview and share `feedback <https://github.com/NVIDIA/gpu-operator/issues>`_ and `contribute <https://github.com/NVIDIA/gpu-operator/blob/master/CONTRIBUTING.md>`_ .

* None

Previous GPU Operator Releases
----

The following table outlines a historic view of GPU Operator support matrix.

.. tabs::

    .. tab:: Bare metal / Virtual machines with GPU Passthrough

      +--------------------------+---------------+------------------------+----------------+
      | GPU Operator Release     | Kubernetes    | OpenShift              | Anthos         |
      +==========================+===============+========================+================+
      | 1.11                     | v1.21+        | 4.9, 4.10, 4.11        | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.10                     | v1.21+        | 4.9, 4.10              | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.9                      | v1.19+        | 4.8, 4.9               | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.8                      | v1.18+        | 4.7, 4.8, 4.9          | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.7                      | v1.18+        | 4.5, 4.6, 4.7          | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.6                      | v1.16+        | 4.5, 4.6, 4.7          | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.5                      | v1.13+        | 4.4.29+, 4.5, 4.6      | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.4                      | v1.13+        | 4.4.29+, 4.5, 4.6      | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.3                      | v1.13+        | 4.4.29+, 4.5, 4.6      | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.2                      | v1.13+        | Not supported          | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.1.7                    | v1.13+        | 4.1, 4.2, 4.3, 4.4     | Supported      |
      +--------------------------+---------------+------------------------+----------------+
      | 1.1                      | v1.13+        | Not supported          | Not supported  |
      +--------------------------+---------------+------------------------+----------------+
      | 1.0                      | v1.13+        | Not supported          | Not supported  |
      +--------------------------+---------------+------------------------+----------------+

    .. tab:: Virtual machines with NVIDIA vCompute Server and NVIDIA RTX Virtual Workstation 

      +--------------------------+---------------+------------------------+----------------+
      | GPU Operator Release     | Kubernetes    | Red Hat OpenShift      | Anthos         |
      +==========================+===============+========================+================+
      | 1.11                     | v1.21+        | 4.9, 4.10              | Not Supported  |
      +--------------------------+---------------+------------------------+----------------+
      | 1.10                     | v1.21+        | 4.9, 4.10              | Not Supported  |
      +--------------------------+---------------+------------------------+----------------+
      | 1.9                      | v1.19+        | 4.8, 4.9               | Not Supported  |
      +--------------------------+---------------+------------------------+----------------+
      | 1.8                      | v1.18+        | 4.7, 4.8               | Not Supported  |
      +--------------------------+---------------+------------------------+----------------+
      | 1.7                      | v1.18+        | 4.6, 4.7, 4.8          | Not Supported  |
      +--------------------------+---------------+------------------------+----------------+
      | 1.6                      | v1.16+        | 4.6, 4.7               | Not Supported  |
      +--------------------------+---------------+------------------------+----------------+
      | 1.5                      | v1.13+        | 4.6                    | Not Supported  |
      +--------------------------+---------------+------------------------+----------------+

    .. tab:: NVIDIA AI Enterprise

      +--------------------------+---------------+------------------------+---------------------------+---------------+
      | GPU Operator Release     | Kubernetes    | OpenShift              | vSphere with Tanzu        | Release       |
      +==========================+===============+========================+===========================+===============+
      | 1.11                     | v1.21+        | 4.9.9+, 4.10, 4.11     | Supported                 | 2.1           |
      +--------------------------+---------------+------------------------+---------------------------+---------------+
      | 1.10.1                   | v1.21+        | 4.9.9+, 4.10           | Supported                 | 2.0           |
      +--------------------------+---------------+------------------------+---------------------------+---------------+
      | 1.9.1                    | v1.21+        | Not Supported          | Supported                 | 1.1           |
      +--------------------------+---------------+------------------------+---------------------------+---------------+
      | 1.8.1                    | v1.21+        | Not Supported          | Not Supported             | 1.0           |
      +--------------------------+---------------+------------------------+---------------------------+---------------+


